# victordb

./: .gitignore  README.md  victor.py
client/: MANIFEST.in
python-package/: LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
python-package/victor_server/: __init__.py  __main__.py  server.py
scripts/: victor_server.py
src/: Makefile  buffer.c  buffer.h  defines.h  fileutils.c  fileutils.h  index_main.c  index_server.c  index_server.h  kvproto.c  kvproto.h  log.c  log.h  main.c  opt.c  opt.h  panic.h  protocol.c  protocol.h  server.c  server.h  socket.c  socket.h  table_main.c  table_server.c  table_server.h  viproto.c  viproto.h  wal_dump.c
